@startuml
class Admin {
    -id : Integer
    -name : String
    -email : String
    -password : String
    -phone : String
    }

class Applicant {
    -id : Integer
    -name : String
    -email : String
    -phone : Integer
    -address : String
    -experience : String
    -education : String
    }

class JobOffer {
    -id : Integer
    -title : String
    -description : String
    -salary : Real
    -location : String
    -date : Date
    -contract : CONTRACT_TYPE
    }

class Company{
    -id : Integer
    -name : String
    -email : String
    -password : String
    -phone : String
    -address : String
    -description : String
    }
class JobApplication{
    -id : Integer
    -status : String
    -date : Date
    }

interface CONTRACT_TYPE{
    +CDI
    +CDD
    +INTERIM
    +FREELANCE
    +STAGE
    }



Company  "1" o-- "1..*" JobOffer
Admin  "1" -- "1..*" JobOffer
JobOffer +-- CONTRACT_TYPE
Applicant "1..*" -- "1..*" JobOffer
(JobOffer, Applicant) .. JobApplication

@enduml
